fix link sequence causing trouble with dark mode.

--- a/css/cards-list-dark.css
+++ b/css/cards-list-dark.css
@@ -55,7 +55,7 @@
 }
 
 .d-card:hover {
-    box-shadow: 0 0 1px 2px black;
+    box-shadow: 0 0 1px 2px gray;
     transition: box-shadow 0.4s linear;
 }
 
